--- a/webapp/home/templates/home/requests/alphafold.html
+++ b/webapp/home/templates/home/requests/alphafold.html
@@ -168,7 +168,7 @@
       Privacy Collection Notice By completing this form you agree that your
       responses will be provided to the Australian BioCommons and Galaxy
       Australia and will be used solely for the purposes of determining
-      suitability for beta testing of the Australian AlphaFold Service. Your
+      suitability for access to the Australian AlphaFold Service. Your
       responses will be protected against unauthorised access and use; providing
       your name is required to enable any follow ups. For more information,
       please see the
