--- a/deploy/ansible/roles/webapp/templates/.env.j2
+++ b/deploy/ansible/roles/webapp/templates/.env.j2
@@ -7,7 +7,7 @@ DB_PASSWORD={{ postgres_db_password }}
 MAIL_HOSTNAME={{ smtp.hostname }}
 MAIL_SMTP_PORT={{ smtp.port }}
 MAIL_SMTP_USERNAME={{ smtp.username }}
-MAIL_SMTP_PASSWORD={{ smtp_password }}
+MAIL_SMTP_PASSWORD={{ smtp.password }}
 
 MAIL_FROM_ADDRESS={{ smtp.from_address }}
 MAIL_TO_ADDRESS={{ smtp.to_address }}
