--- a/deploy/ansible/roles/webapp/templates/.env.j2
+++ b/deploy/ansible/roles/webapp/templates/.env.j2
@@ -20,3 +20,6 @@ SLACK_API_URL={{ slack.tools.url }}
 SLACK_API_KEY={{ slack.errors.api_key }}
 SLACK_CHANNEL_ID={{ slack.errors.channel_id }}
 SLACK_MENTION_USER_ID={{ slack.errors.mention_user_id }}
+
+GALAXY_URL={{ galaxy_api.url }}
+GALAXY_API_KEY={{ galaxy_api.key }}
