Render institutions list from data in dedicated view

--- a/webapp/home/templates/home/index.html
+++ b/webapp/home/templates/home/index.html
@@ -273,7 +273,7 @@
         <p>
           Your data limits on Galaxy Australia depend on how you register with
           the service. We provide greater privileges to verified
-          <a href="/list-of-institutions.html">Australian Researchers</a>.
+          <a href="/institutions">Australian Researchers</a>.
         </p>
       </div>
 
