--- a/webapp/home/templates/home/pages/docs.html
+++ b/webapp/home/templates/home/pages/docs.html
@@ -23,7 +23,7 @@
       </li>
 
       <li>
-        <a href="/list-of-institutions.html">Australian research institutions</a>
+        <a href="/institutions">Australian research institutions</a>
       </li>
 
       <li>
