Revise email invalid respose email

--- a/webapp/home/templates/home/requests/alphafold-success.html
+++ b/webapp/home/templates/home/requests/alphafold-success.html
@@ -15,7 +15,7 @@
 
     <br>
 
-    <p class="alert alert-success">
+    <p class="alert alert-success" style="max-width: 600px;">
       If we find a Galaxy Australia account registed to {{ email }}, an
       administrator will enable AlphaFold access for this account.
     </p>
