Update Google privacy policy link

--- a/webapp/home/templates/home/snippets/about/data-privacy.html
+++ b/webapp/home/templates/home/snippets/about/data-privacy.html
@@ -174,7 +174,7 @@
     <ol>
       <li>
         Galaxy Australia uses Google Analytics to analyse usage and improve the service. Google Analytics uses cookies to generate data which is transmitted to Google. You can view Google’s Privacy Policy and options for controlling the data collected
-        <a href="www.google.com/policies/privacy/partners/" target="_blank">here</a>.
+        <a href="https://policies.google.com/technologies/partner-sites" target="_blank">here</a>.
       </li>
       <li>
         Galaxy Australia uses PostHog to analyse usage and improve the service. PostHog may use cookies to collect some of this information, but does not not track your usage to perform product analytics. You can view PostHog’s Privacy Policy and options for controlling the data collected
