Remove redundant reference to header_landing.html

--- a/webapp/home/templates/home/index.html
+++ b/webapp/home/templates/home/index.html
@@ -1,4 +1,4 @@
-{% extends landing|yesno:'home/header_landing.html,home/header.html' %}
+{% extends 'home/header.html' %}
 
 {% load static %}
 {% load markdown %}
