--- a/webapp/home/templates/home/index.html
+++ b/webapp/home/templates/home/index.html
@@ -24,7 +24,7 @@
 
   <section class="container-fluid my-5" id="tagline">
 
-    {% for notice in notices %}
+    {% for notice in danger_notices %}
 
     {% if notice.notice_class == 'none' %}
     <div class="container my-5">
@@ -48,6 +48,46 @@
       {{ notice.body|markdown|safe }}
     </div>
     {% endfor %}
+
+    {% if notices %}
+    <div id="notice-rotation">
+      {% for notice in notices %}
+
+      {% if notice.notice_class == 'none' %}
+      <div
+        class="container my-5"
+        id="notice-{{ forloop.counter }}"
+        {% if forloop.counter0 %}style="display: none;"{% endif %}
+      >
+      {% else %}
+      <div
+        class="notice alert alert-{{ notice.notice_class }}"
+        id="notice-{{ forloop.counter }}"
+        {% if forloop.counter0 %}style="display: none;"{% endif %}
+      >
+      {% endif %}
+
+        {% if not notice.is_published %}
+        {% include 'home/snippets/unpublished-bubble.html' %}
+        {% endif %}
+
+        {% if notice.material_icon %}
+        <span class="material-icons">{{ notice.material_icon }}</span>
+        {% endif %}
+
+        {% if notice.display_title %}
+        <strong> {{ notice.title }} </strong>
+        <br>
+        {% endif %}
+
+        {{ notice.short_description|safe }}
+        {% if notice.body %}
+        <a href="{{ notice.url }}">Read more</a>.
+        {% endif %}
+      </div>
+      {% endfor %}
+    </div>
+    {% endif %}
 
     <p>
       Galaxy Australia is an
@@ -300,6 +340,15 @@
 
 <script type="text/javascript">
 
+  // Ignore websocket errors
+  window.onerror = function (msg, url, line) {
+    console.log("Error received");
+    if (msg.includes("WebSocket connection")) {
+      console.log("Ignoring websocket error");
+      return true
+    }
+  }
+
   const IFRAME_COUNT = 5;
   let loaded = [];
 
@@ -310,7 +359,12 @@
       $('#stats-panel iframe').css('opacity', '1');
     }
   }
+</script>
 
+{% endblock %}
+
+
+{% block onload %}
   // Ensure that notice links open in new tab if external
   $('.notice a').each( (i, item) => {
     if (item.href[0] !== '/') {
@@ -318,10 +372,46 @@
     }
   });
 
-</script>
+  // Set notice height dynamically
+  const noticeHeight = $('#notice-rotation .notice').toArray().reduce( (acc, item) => {
+    return Math.max(acc, item.offsetHeight);
+  }, 0);
+  if (noticeHeight > 100) {
+    // Max height is larger than default
+    console.log('Increasing hard-height on rotating notices')
+    $('#notice-rotation .notice').css('height', `${noticeHeight}px`)
+  }
 
-{% endblock %}
+  // Rotate low-priority notices
+  const PAUSE_MS = 4000;
+  const FADE_MS = 500;
+  const notices = $('#notice-rotation .notice');
+  let ix = 0;
+  let next;
+  console.log(notices.length + " notices to rotate");
+  const fadeAnimate = () => {
+    console.log("FadeAnimate")
+    const current = notices[ix];
+    next = notices[ix + 1];
+    if (ix + 1 >= notices.length) {
+      ix = -1;
+      next = notices[0];
+      console.log("Reset notice ix")
+    }
 
+    // Defer cycle if user is hovering
+    if ( $('.notice:hover').length ) {
+      console.log("Deferring cycle due to mouse hover");
+      return setTimeout(fadeAnimate, PAUSE_MS);
+    }
 
-{% block onload %}
+    $(current).fadeOut(FADE_MS, () => {
+      console.log("Fading to notice " + (ix + 1))
+      $(next).fadeIn(FADE_MS);
+      ix++;
+      setTimeout(fadeAnimate, PAUSE_MS);
+    });
+  };
+
+  notices.length > 1 && setTimeout(fadeAnimate, PAUSE_MS);
 {% endblock %}
