--- a/webapp/home/templates/home/notice.html
+++ b/webapp/home/templates/home/notice.html
@@ -35,7 +35,8 @@
 {% block onload %}
 // Ensure that notice links open in new tab if external
 $('a').each( (i, item) => {
-  if (item.href[0] !== '/') {
+  if (!item.href.includes("{{ HOSTNAME }}")) {
+    console.log(`Setting _blank on href ${item.href}`)
     item.target = '_blank';
   }
 });
