--- a/webapp/home/templates/home/notice.html
+++ b/webapp/home/templates/home/notice.html
@@ -10,7 +10,9 @@
 
 {% block content %}
 <main>
-  <a class="ga-btn" href="/"> &lt; Back</a>
+  <div class="d-flex justify-content-center">
+    <a class="ga-btn" href="/">Home</a>
+  </div>
 
   <br><br>
 
