--- a/webapp/home/static/home/css/index.css
+++ b/webapp/home/static/home/css/index.css
@@ -3,11 +3,63 @@
   max-width: 450px;
   height: auto;
 }
-.notice p {
-  margin: 0;
+
+/* Alert bar */
+#notice-bar {
+  text-align: center;
+  width: calc(100% + 4rem);
+  margin: 0 -2rem;
+  position: relative;
 }
-#notice-rotation .notice {
-  height: 100px;
+.notice-control {
+  color: var(--color);
+  background: transparent;
+  border: 1px solid transparent;
+  border-radius: 50%;
+  padding: 0;
+  margin: 0;
+  width: 2rem;
+  height: 2rem;
+  text-align: center;
+  position: absolute;
+  top: calc(8px - 0.1rem);
+  font-size: 2rem;
+  cursor: pointer;
+  transition-duration: .25s;
+  z-index: 100;
+  line-height: 0.85;
+}
+.notice-control:hover {
+  background-color: rgba(0,0,0,0.1);
+}
+#notice-left {
+  left: 2rem;
+}
+#notice-right {
+  right: 2rem;
+}
+.notice {
+  margin: 0;
+  padding: .5rem;
+  width: 100%;
+  white-space: nowrap;
+}
+.notice.clickable {
+  cursor: pointer;
+}
+.notice.clickable:hover .body {
+  text-decoration: underline;
+  -webkit-transition: all .5s;
+  -moz-transition: all .5s;
+  -o-transition: all .5s;
+  transition: all .5s;
+}
+.notice .body {
+  display: inline-block;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  padding: 0 5rem;
+  width: 100%;
 }
 #stats-panel {
   position: relative;
