--- a/webapp/home/templates/home/header.html
+++ b/webapp/home/templates/home/header.html
@@ -22,9 +22,53 @@
     </style>
   </head>
 
-  <body>
+  <body {% if notices %}style="padding-top: 0;"{% endif %}>
 
-    <nav class="navbar fixed-top navbar-expand embedded">
+    <!-- Notice bar -->
+    {% if notices %}
+    <div id="notice-bar" class="embedded">
+
+      <div class="notice-control" id="notice-left" onclick="moveNotice('left');">
+        <span class="material-icons">chevron_left</span>
+      </div>
+      <div class="notice-control" id="notice-right" onclick="moveNotice('right');">
+        <span class="material-icons">chevron_right</span>
+      </div>
+
+      {% for notice in notices %}
+      <div
+        {% if notice.url %}
+        class="notice alert alert-{{ notice.notice_class }} clickable"
+        onclick="window.location.href = '{{ notice.url }}';"
+        {% elif notice.notice_class == 'info' %}
+        {% else %}
+        class="notice alert alert-{{ notice.notice_class }}"
+        {% endif %}
+        id="notice-{{ forloop.counter }}"
+        {% if forloop.counter0 %}style="display: none;"{% endif %}
+      >
+        {% if not notice.is_published %}
+        {% include 'home/snippets/unpublished-bubble.html' %}
+        {% endif %}
+
+        <span class="body">
+          {% if notice.material_icon %}
+          <span class="material-icons mx-2">{{ notice.material_icon }}</span>
+          {% endif %}
+          {{ notice.short_description|safe }}
+        </span>
+      </div>
+
+      {% endfor %}
+    {% endif %}
+
+    <nav
+      {% if notices %}
+      class="navbar navbar-expand embedded"
+      {% else %}
+      class="navbar fixed-top navbar-expand embedded"
+      {% endif %}
+    >
       <a class="navbar-brand" href="/">
         <span class="australia">Galaxy {{ GALAXY_SITE_NAME }}</span> {{ GALAXY_SITE_SUFFIX }}
       </a>
@@ -100,6 +144,9 @@
       </div>
       {% endif %}
     </nav>
+    {% if notices %}
+    </div>
+    {% endif %}
 
 
     {% block content %}
@@ -125,6 +172,10 @@
 
       // Determine whether page is being viewed in iframe
       function inIframe () {
+
+        // TODO
+        return true;
+
         try {
             return window.self !== window.top;
         } catch (e) {
