--- a/webapp/home/templates/home/header.html
+++ b/webapp/home/templates/home/header.html
@@ -172,10 +172,6 @@
 
       // Determine whether page is being viewed in iframe
       function inIframe () {
-
-        // TODO
-        return true;
-
         try {
             return window.self !== window.top;
         } catch (e) {
@@ -184,8 +180,12 @@
       }
 
       $(document).ready( () => {
-        // Switch to solid navbar if not embedded in iframe
-        inIframe() || $('nav').removeClass("embedded");
+        // Restyle navbar if not embedded in iframe
+        if ( !inIframe() ) {
+          $('nav').removeClass('embedded');
+          $('#notice-bar').before($('nav'));
+          $('nav').css({margin: '0 -2rem'});
+        }
 
         // Enable bootstrap tooltips
         var tooltipTriggerList = [].slice.call(document.querySelectorAll('[data-bs-toggle="tooltip"]'))
