--- a/webapp/home/templates/home/header.html
+++ b/webapp/home/templates/home/header.html
@@ -185,6 +185,7 @@
           $('nav').removeClass('embedded');
           $('#notice-bar').before($('nav'));
           $('nav').css({margin: '0 -2rem'});
+          window.scrollTo(0,0);
         }
 
         // Enable bootstrap tooltips
