Prevent selecting notice change button text

--- a/webapp/home/static/home/css/index.css
+++ b/webapp/home/static/home/css/index.css
@@ -28,6 +28,9 @@
   transition-duration: .25s;
   z-index: 100;
   line-height: 0.85;
+  -webkit-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
 }
 #notice-bar .notice-control:hover {
   background-color: rgba(0,0,0,0.1);
