--- a/webapp/home/templates/home/snippets/imports.html
+++ b/webapp/home/templates/home/snippets/imports.html
@@ -16,3 +16,4 @@
   crossorigin="anonymous"
   referrerpolicy="no-referrer"
 ></script>
+<script src="https://cdn.jsdelivr.net/npm/js-cookie@3.0.1/dist/js.cookie.min.js"></script>
