--- a/webapp/home/templates/home/index.html
+++ b/webapp/home/templates/home/index.html
@@ -35,7 +35,7 @@
         class="btn-close"
         data-bs-dismiss="alert"
         aria-label="Close"
-        onclick="requestDismissNotice('{{ notice.datetime_modified|date:"c" }}');"
+        onclick="requestDismissNotice('{{ notice.timestamp }}');"
       ></button>
 
       {% if notice.material_icon %}
