--- a/webapp/home/static/home/css/index.css
+++ b/webapp/home/static/home/css/index.css
@@ -8,7 +8,7 @@
 #notice-bar {
   text-align: center;
   width: calc(100% + 4rem);
-  margin: 0 -2rem;
+  margin: 0 -2rem 2rem -2rem;
   position: relative;
 }
 #notice-bar .notice-control {
