Tool updates to email addresses

--- a/deploy/ansible/roles/webapp/templates/.env.j2
+++ b/deploy/ansible/roles/webapp/templates/.env.j2
@@ -16,7 +16,7 @@ MAIL_USE_TLS={{ smtp.use_tls }}
 RECAPTCHA_SITE_KEY={{ recaptcha_site_key }}
 RECAPTCHA_SECRET_KEY={{ recaptcha_secret_key }}
 
-SLACK_API_URL={{ slack.tools.url }}
+SLACK_API_URLS={{ slack.tools.urls }}
 SLACK_API_KEY={{ slack.errors.api_key }}
 SLACK_CHANNEL_ID={{ slack.errors.channel_id }}
 SLACK_MENTION_USER_ID={{ slack.errors.mention_user_id }}
