--- a/webapp/home/templates/home/pages/docs.html
+++ b/webapp/home/templates/home/pages/docs.html
@@ -10,6 +10,7 @@
 
   <p class="lead">
     This page contains a list of guides specific to features on Galaxy Australia.
+    <br>
     General Galaxy training material can be found
     <a href="https://training.galaxyproject.org/training-material/">here</a>.
   </p>
@@ -21,6 +22,10 @@
       <li>
         <a href="/cloudstor.html">File transfer with CloudStor</a>
       </li>
+
+      <!-- <li>
+        <a href="/owncloud.html">File transfer with OwnCloud</a>
+      </li> -->
 
       <li>
         <a href="/institutions">Australian research institutions</a>
