Add decommission warning to cloudstor page

--- a/webapp/home/templates/home/pages/cloudstor.html
+++ b/webapp/home/templates/home/pages/cloudstor.html
@@ -12,13 +12,23 @@
       <h1> Connecting to CloudStor </h1>
     </div>
     <div class="col text-end p-3">
-      <a href="https://cloudstor.aarnet.edu.au">
+      <a href="https://www.aarnet.edu.au/cloudstor">
         <img src="{% static 'home/img/cloudstor-logo.png' %}" alt="CloudStor logo" width="128px">
       </a>
     </div>
   </div>
 
-  <div class="container py-5">
+  <p class="alert alert-warning">
+    <span class="material-icons">warning</span>
+    AARNet have announced that
+    <a href="https://support.aarnet.edu.au/hc/en-us/articles/5697089309711" target="_blank">
+      CloudStor will be decommissioned
+    </a>
+    by the end of 2023.
+    Please make plans to transition to a different cloud storage provider.
+  </p>
+
+  <div class="container my-3">
     <p>
       The import/export tools allow you to transfer one or more files to a registered
       <a href="https://www.aarnet.edu.au/network-and-services/cloud-services/cloudstor/" target="_blank">AARNet CloudStor</a>
