Update cloudstor warning message

--- a/webapp/home/templates/home/pages/cloudstor.html
+++ b/webapp/home/templates/home/pages/cloudstor.html
@@ -25,7 +25,15 @@
       CloudStor will be decommissioned
     </a>
     by the end of 2023.
-    Please make plans to transition to a different cloud storage provider.
+    For long-term storage of your Galaxy data, we recommend archiving your
+    histories to storage solutions provisioned by your institution.
+    Find information on managing your Galaxy histories on the
+    <a
+      target="_blank"
+      href="https://training.galaxyproject.org/training-material/topics/galaxy-interface/tutorials/download-delete-data/tutorial.html"
+    >Galaxy Training Network</a>.
+    If you have any concerns about this transition, please
+    <a href="/request/support">make a support request</a>.
   </p>
 
   <div class="container my-3">
